--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,41 @@
-python-decouple>=3.8,<4.0.0
-pydantic[email]>=2.10.4,<3.0.0
-matplotlib>=3.8,<4.0
-seaborn>=0.13.2,<0.14.0
-pandas>=2.2,<3.0
-torch>=2.5,<3.0
-scikit-learn>=1.6,<2.0
-deepdiff>=8.1,<9.0
-diff-match-patch>=20241021,<20250000
-sdv>=1.17.3,<=1.18.0
-faker>=33.1,<34.0
-scipy>=1.14,<2.0
-uvicorn[standard]>=0.34,<1.0
-openpyxl>=3.1,<4.0
+python-decouple==3.8
+pydantic[email]==2.12.4
+matplotlib==3.8.2
+seaborn==0.13.2
+pandas==2.2.2
+torch==2.8.0
+scikit-learn==1.7.2
+deepdiff==8.6.1
+diff-match-patch==20241021
+sdv==1.18.0
+faker==33.3.1
+scipy==1.16.3
+uvicorn[standard]==0.38.0
+openpyxl==3.1.5
 xlrd==2.0.1
-rstr>=3.2,<4.0
-recordlinkage>=0.16,<0.17
-kaleido>=1.0.0
-plotly>=6.1,<7.0
-pillow>=11.2,<12.0
-multidict>=6.4,<7.0
-bcrypt>=4.3,<5.0
-wordcloud>=1.9,<2.0
-langdetect>=1.0,<2.0
-fasttext-wheel>=0.9.2,<0.10.0
-datasketch>=1.6.5,<2.0
-nltk>=3.9,<4.0
-dask[complete]>=2025.0.0,<2026.0.0
-pyarrow>=14.0,<15.0
-numpy>=1.26,<2.0
-pytest>=8.3,<9.0
-matplotlib-venn>=1.1.2,<2.0
-psutil>=5.9,<6.0
-ijson>=3.1,<4.0
-chardet>=5.2,<6.0
-rapidfuzz>=3.13,<4.0
-cachetools>=6.1,<7.0
-faiss-cpu>=1.11.0.post1,<2.0
-spacy>=3.8,<4.0
+rstr==3.2.2
+recordlinkage==0.16
+plotly==6.4.0
+kaleido==1.2.0
+pillow==11.3.0
+multidict==6.7.0
+bcrypt==4.3.0
+wordcloud==1.9.4
+langdetect==1.0.9
+fasttext-wheel==0.9.2
+datasketch==1.7.0
+nltk==3.9.2
+dask[complete]==2025.11.0
+pyarrow==14.0.2
+numpy==1.26.4
+pytest==8.4.2
+matplotlib-venn==1.1.2
+psutil==5.9.8
+ijson==3.4.0.post0
+chardet==5.2.0
+rapidfuzz==3.14.3
+cachetools==6.2.2
+faiss-cpu==1.12.0
+spacy==3.8.9
 phonenumbers==9.0.10
-base58>=2.1.1,<3.0
+base58==2.1.1
